# GameDev-Skyrim_RfaD_Project_main_dll

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gen.bat  logger_annotated.h  vcpkg-configuration.json  vcpkg.json
include/: ActionManager.h  GamePtr.h  InputWatcher.h  ItemCardFixer.h  core.h  gameplay.h  ui.h  utils.h
src/: ActionManager.cpp  ActionManager.h  Events.h  GamePtr.h  Hooks.h  InputWatcher.cpp  InputWatcher.h  ItemCardFixer.cpp  ItemCardFixer.h  Main.cpp  PCH.h  core.cpp  core.h  gameplay.cpp  gameplay.h  main.cpp  ui.cpp  ui.h  utils.cpp  utils.h
